crates/bc-cli/tests/cli/snapshots/cli__account_life__recreate_with_same_opened_on_is_a_noop.snap
---
source: crates/bc-cli/tests/cli/account_life.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
Account already exists: Assets:BankA:Checking ([ACCOUNT_ID])
----- stderr -----
