crates/bc-cli/tests/cli/snapshots/cli__account_life__reopen_a_closed_account.snap
---
source: crates/bc-cli/tests/cli/account_life.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
Reopened account: [ACCOUNT_ID]
----- stderr -----
