crates/bc-cli/tests/cli/snapshots/cli__account_life__reopening_an_open_account_exits_four.snap
---
source: crates/bc-cli/tests/cli/account_life.rs
expression: output
---
success: false
exit_code: 4
----- stdout -----
----- stderr -----
error: account is not closed: [ACCOUNT_ID]
