crates/bc-cli/tests/cli/snapshots/cli__account_life__set_opened_on_clears_when_omitted.snap
---
source: crates/bc-cli/tests/cli/account_life.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
Cleared opened_on for account [ACCOUNT_ID]
----- stderr -----
