crates/bc-cli/tests/cli/snapshots/cli__account_life__set_opened_on_updates_the_account.snap
---
source: crates/bc-cli/tests/cli/account_life.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
Set opening date for account [ACCOUNT_ID]: 2024-01-01
----- stderr -----
